2008-04-01 [colin]	3.3.1cvs48

	* src/imap_gtk.c
		Fix bug 1561, 'Crashes leaving unsubscribed folder after 
		ticking "Show only subscribed"'

2008-03-31 [colin]	3.3.1cvs47

	* src/folder.c
		Fix bug 1553, 'File lock not respected'
		Regression due to the implementation of
		deletion batching

2008-03-31 [colin]	3.3.1cvs46

	* src/mainwindow.c
		Fix tags menu update, thanks to Paul

2008-03-29 [wwp]	3.3.1cvs45

	* src/prefs_account.c
	* src/prefs_common.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		Fix compose template formats (in global preferences)
		being translated under specific conditions.
		Add a button to restore factory defaults for current
		language.

2008-03-27 [colin]	3.3.1cvs44

	* src/common/prefs.c
	* src/common/xmlprops.c
		Fix RedHat bug 431735, 'segfault if /home is full' 
		(when starting): Fix double fclose() in prefs.c
		and potentially xmlprops.c

2008-03-27 [colin]	3.3.1cvs43

	* src/addressbook.c
		Fix bug 1559, 'Claws Mail crashed deleting all 
		common contacts'

2008-03-27 [wwp]	3.3.1cvs42

	* src/addressbook.c
		Fix 3.3.0cvs41.

2008-03-27 [wwp]	3.3.1cvs41

	* src/addressbook.c
		Prevent list flickering when deleting addresses.

2008-03-26 [colin]	3.3.1cvs40

	* src/imap.c
		Clean up session disconnection. Possibly
		fix Ubuntu bug #204290

2008-03-26 [colin]	3.3.1cvs39

	* src/textview.c
		Fix bug 1555: current folder wasn't used when
		right-clicking on an email address

2008-03-25 [colin]	3.3.1cvs38

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
		Add a "learn from whitelist" preference
		Whitelist Unsure mails too.

2008-03-24 [paul]	3.3.1cvs37

	* src/prefs_account.c
		If no MH mailbox and no account exists, when
		creating a POP/Local account, just create and
		use the default one instead of bailing with a
		"Mailbox doesn't exist" error

2008-03-21 [colin]	3.3.1cvs36

	* src/procmime.c
		strstrip mime subtype
