@@ -1,3 +1,11 @@
+2008-04-02 [colin]	3.3.1cvs49
+
+	* src/main.c
+		Fix bug 1562, 'Claws-Mail does not completely 
+		respect settings in GTK2_RC_FILES environment'
+		Remove manual parsing of .gtkrc-2.0 and 
+		.gtk/gtkrc-2.0. GTK does it itself these days.
+
 2008-04-01 [colin]	3.3.1cvs48
 
 	* src/imap_gtk.c
